--- a/package.json
+++ b/package.json
@@ -52,8 +52,6 @@
     "postcss": "^8.4.47",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.14",
-    "typescript-eslint": "^8.10.0",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "typescript-eslint": "^8.10.0"
   }
 }
